--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -49,7 +49,7 @@
 
         background: #97ECB9
      }
-    .delete { 
+    .favorite { 
             position: absolute;
             width: 150px;
             height: 20px;
