--- a/app/views/favorite_books/_card.slim
+++ b/app/views/favorite_books/_card.slim
@@ -1,12 +1,13 @@
-.card
+.favorite-card
 
       
-  .book-title
+  .fav-book-title
     h3 = favorite_book.title
   
-  .book-author
+  .fav-book-author
     h5 =  favorite_book.author_name
-  //=simple_form_for(Book.new) do |f|
-   //   =f.hidden_field :title, :value => book["volumeInfo"]["title"]
-    //  =f.hidden_field :authors, :value => book["volumeInfo"]["authors"]
-   //   =f.button :button
+  
+  .destroy
+    =simple_form_for favorite_book, method: :delete do |f|
+      
+      =f.button :button,  'delete'
