--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,9 +1,9 @@
 .card {
     position: relative;
-    width: 1200px;
-    height: 700px;
-    
-    background: #FCECEC
+    width: 1440px;
+    height: 900px;
+
+    background: #FFFFFF;
 }
     .book-image{
         position: absolute;
