--- a/app/views/favorite_books/show.slim
+++ b/app/views/favorite_books/show.slim
@@ -1,9 +1,12 @@
-h1 список любимых   
+h1 =@book.title
 
 
 
+=form_with url: "/comments", method: :post do |form| 
+  =form.hidden_field :favorite_book_id , :value => @book.id
+  =form.hidden_field :user_id ,          :value => @current_user.id
+  =form.label :'комментарий' 
+  =form.rich_text_area :comment 
+  =form.submit :'отправить комментарий'
 
-- @books.find_each do |books|
-
-
-  = render partial: "card", locals: { books: books}
+ 
