--- a/app/views/favorite_books/show.slim
+++ b/app/views/favorite_books/show.slim
@@ -2,11 +2,13 @@ h1 =@book.title
 
 
 
-=form_with url: "/comments", method: :post do |form| 
+=form_with model: Comment.new, method: :post do |form| 
   =form.hidden_field :favorite_book_id , :value => @book.id
   =form.hidden_field :user_id ,          :value => @current_user.id
   =form.label :'комментарий' 
-  =form.rich_text_area :comment 
+  =form.rich_text_area :content 
   =form.submit :'отправить комментарий'
 
- 
+h2 
+- @book.comments.each do |comment|
+  =render partial: "comment", locals: {comment: comment}
