--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,28 @@
       <%= content_tag :div, msg, class: name %>
     <% end -%>
     <%= yield %>
+    <style type="text/css"> 
+    button[name="log_out"] { 
+      position: absolute;
+      left: 72.64%;
+      right: 15.31%;
+      top: 2.87%;
+      bottom: 85.03%;
+
+      border: none;
+      border-radius: 7px;
+      padding: 10px 25px;
+      background: #ff9900;
+      cursor: pointer;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: white;
+    }
+    button[name="log_out"]:hover { 
+      background: #ff6600;
+    } 
+  </style>
+  <button type="button" name="log_out">Log out</button>
+  
   </body>
 </html>
