--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,38 +5,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </head>
 
   <body>
+    <%= render partial: "components/header", locals: { current_user: @current_user} %>
     <% flash.each do |name, msg| -%>
       <%= content_tag :div, msg, class: name %>
     <% end -%>
     <%= yield %>
-    <style type="text/css"> 
-    button[name="log_out"] { 
-      position: absolute;
-      left: 72.64%;
-      right: 15.31%;
-      top: 2.87%;
-      bottom: 85.03%;
-
-      border: none;
-      border-radius: 7px;
-      padding: 10px 25px;
-      background: #ff9900;
-      cursor: pointer;
-      text-transform: uppercase;
-      font-weight: bold;
-      color: white;
-    }
-    button[name="log_out"]:hover { 
-      background: #ff6600;
-    } 
-  </style>
-  <button type="button" name="log_out">Log out</button>
+ 
+  
   
   </body>
 </html>
