--- a/app/assets/stylesheets/favorite_books.scss
+++ b/app/assets/stylesheets/favorite_books.scss
@@ -9,6 +9,9 @@
     background: #A33838;
 }
     
+    .star-color {
+      color:rgb(243, 240, 51)
+    }
     .fav-book-title{
         position: absolute;
         width: 238px;
@@ -46,4 +49,5 @@
         box-sizing: border-box;
         
     }
+
     
