create book lists structure

--- a/app/views/favorite_books/show.slim
+++ b/app/views/favorite_books/show.slim
@@ -3,7 +3,7 @@
 
 .mdl-grid
     .mdl-cell.mdl-cell--2-col
-    .mdl-cell.mdl-cell--8-col
+    .mdl-cell.mdl-cell--8-col.fb-show-common-box
       .mdl-grid
         .mdl-cell.mdl-cell--4-col
           img src = @book_data["volumeInfo"]["imageLinks"]["smallThumbnail"]
