--- a/app/assets/stylesheets/favorite_books.scss
+++ b/app/assets/stylesheets/favorite_books.scss
@@ -8,9 +8,11 @@
     
     background: #A33838;
 }
-    
+    .fb-show-common-box {
+        background-color: #e2e7f3;
+    }
     .star-color {
-      color:rgb(243, 240, 51)
+      color:rgb(255, 235, 52)
     }
     .fav-book-title{
         position: absolute;
