layout page search results

--- a/app/assets/stylesheets/favorite_books.scss
+++ b/app/assets/stylesheets/favorite_books.scss
@@ -6,7 +6,7 @@
     width: 1200px;
     height: 700px;
     
-    background: #A33838;
+    background: #5d89da;
 }
     .fb-show-common-box {
         background-color: #e2e7f3;
