--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,62 +1,54 @@
 .card {
-    position: relative;
-    width: 1440px;
-    height: 900px;
+    
 
-    background: #FFFFFF;
+    background: #d0e2f3;
 }
+    .header{
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 25px;
+        line-height: 80px;
+        color: #1F54DD;
+    }
     .book-image{
-        position: absolute;
-        width: 200px;
-        height: 250px;
-        left: 50px;
-        top: 10px;
-
+        
       }
     .book-title{
-        position: absolute;
-        width: 500px;
-        height: 50px;
-        left: 600px;
-        top: 10px;
-
-        background: #13E8E8;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
+       
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 80px;
+        
+        color: #1F54DD;
+        
+      
      }
     .book-summary {
-        position: absolute;
-        width: 500px;
-        height: 200px;
-        left: 600px;
-        top: 100px;
-        font-family: Roboto;
-        font-style: regular;
-        font-size: 11px;
-        line-height: 11px;
-        line-height: 100%;
-        align: Left;
-        vertical-align: Top;
-        
-        background: #F56565
+     
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 80px;
+        color: #dd1f78;
+       
      }
     .book-author {
-        position: absolute;
-        width: 500px;
-        height: 50px;
-        left: 600px;
-        top: 370px;
-
-        background: #97ECB9
+    
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 80px;
+        color: #1d36c5;
+       
      }
     .favorite { 
-            position: absolute;
-            width: 150px;
-            height: 20px;
-            left: 950px;
-            top: 470px;
+            
     
-            background: #FABDBD 
      }
     
    
