--- a/app/views/search/index.slim
+++ b/app/views/search/index.slim
@@ -1,5 +1,8 @@
-h1 результат поиска
-
+.mdl-grid
+    .mdl-cell.mdl-cell--4-col
+    .mdl-cell.mdl-cell--4-col.header
+      .mdc-item__primary-text Результаты поиска:
+    .mdl-cell.mdl-cell--4-col
 - @books_data.each  do |book|
 
   = render partial: "book_card", locals: { book: book}
