--- a/app/views/start/search.slim
+++ b/app/views/start/search.slim
@@ -11,13 +11,23 @@ p
     
     .mdl-cell.mdl-cell--2-col
       
-       
+ 
 .mdl-grid
     .mdl-cell.mdl-cell--4-col
-    .mdl-cell.mdl-cell--6-col   
-      -@book_lists.each do |book_list|
-        =render partial: "show_book_lists", locals: {book_list: book_list}
+    .mdl-cell.mdl-cell--6-col.search-index-book-lists   
+      .mdc-list.mdc-list
+      .mdc-list-item tabindex="0" 
+        span.mdc-list-item__ripple
+        span.mdc-list-item__text
+        span.mdc-list-item__primary-text Недавно добавленные буклисты: 
+
+        -@book_lists.each do |book_list|
+          =render partial: "show_book_lists", locals: {book_list: book_list}
+        
     .mdl-cell.mdl-cell--2-col
+
+
+
 //= form_with url: "/login", method: :get do |form| 
   //= form.submit "sign_in"
     //redirect_to login_path
@@ -26,4 +36,3 @@ p
   //= form.submit "sign_up"
     //redirect_to @users
 
-к
