layout page index favorite books

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -9,7 +9,7 @@
         font-weight: normal;
         font-size: 25px;
         line-height: 80px;
-        color: #1F54DD;
+        color: #dd1f88;
     }
     .book-image{
         
