--- a/app/assets/stylesheets/favorite_books.scss
+++ b/app/assets/stylesheets/favorite_books.scss
@@ -2,11 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .favorite-card {
-    position: relative;
-    width: 1200px;
-    height: 700px;
-    
-    background: #5d89da;
+   
+    background: #86aaec;
 }
     .fb-show-common-box {
         background-color: #e2e7f3;
@@ -15,40 +12,29 @@
       color:rgb(255, 235, 52)
     }
     .fav-book-title{
-        position: absolute;
-        width: 238px;
-        height: 72px;
-        left: 400px;
-        top: 47px;
-
-        background: #B5203A;
-        background-blend-mode: hard-light;
-        mix-blend-mode: normal;
-        border: 1px solid #D86565;
-        box-sizing: border-box;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 80px;
+        
+        color: #321fdd;
      }
     
     .fav-book-author {
-        position: absolute;
-        width: 500px;
-        height: 50px;
-        left: 600px;
-        top: 370px;
-
-        background: #97ECB9
+       
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 80px;
+        color: #d44a8b;
      }
     .destroy { 
-           
-        position: absolute;
-        width: 156px;
-        height: 81px;
-        left: 494px;
-        top: 298px;
+    
         
-        background: #433D3D;
-        border: 1px solid #000000;
-        box-sizing: border-box;
+       
         
     }
 
