--- a/app/views/favorite_books/index.slim
+++ b/app/views/favorite_books/index.slim
@@ -1,12 +1,15 @@
- список любимых
 
+
+.mdl-grid
+   .mdl-cell.mdl-cell--4-col
+   .mdl-cell.mdl-cell--8-col.header
+      .mdc-item__primary-text СПИСОК ЛЮБИМЫХ
+   .mdl-cell.mdl-cell--2-col
 - @books.find_each do |favorite_book|
    .mdl-grid
-      .mdl-cell.mdl-cell--4-col
-      .mdl-cell.mdl-cell--6-col
-         = render partial: "card", locals: { favorite_book: favorite_book}
       .mdl-cell.mdl-cell--2-col
-
-
+      .mdl-cell.mdl-cell--8-col
+          = render partial: "card", locals: { favorite_book: favorite_book}
+      .mdl-cell.mdl-cell--2-col
 = paginate @books
 
