created table rating

--- a/app/views/components/_header.slim
+++ b/app/views/components/_header.slim
@@ -8,11 +8,11 @@ header.mdl-layout__header.mdl-layout__header--scroll.mdl-color--primary
               i.material-icons more_vert
             ul.mdl-menu.mdl-menu--top-right.mdl-js-menu.mdl-js-ripple-effect data-mdl-for="demo-menu-top-right" 
                
-              a.mdc-list-item href="#"
+              a.mdc-list-item
                 =link_to 'список любимых', favorite_books_path
                 i.material-icons.mdc-list-item__graphic aria-hidden="true"  star
                
-              a.mdc-list-item href="#"
+              a.mdc-list-item
                 =link_to 'ваши буклисты',  book_lists_path
                 i.material-icons.mdc-list-item__graphic aria-hidden="true"  box
                
